Add imguizmo, imnodes

--- a/Linky/CMakeLists.txt
+++ b/Linky/CMakeLists.txt
@@ -12,6 +12,8 @@ include(assimp)
 include(glad)
 include(glfw)
 include(imgui)
+include(imguizmo)
+include(imnodes)
 include(entt)
 
 target_link_libraries(${project_name} PUBLIC
@@ -22,8 +24,12 @@ target_link_libraries(${project_name} PUBLIC
   external::assimp
   external::glfw
   external::imgui
+  external::imguizmo
+  external::imnodes
   external::entt
 )
+
+set (CMAKE_SHARED_LINKER_FLAGS "-Wl,--as-needed")
 
 # Include directories
 target_include_directories(${PROJECT_NAME} PUBLIC
