--- a/cmake/version.hpp.in
+++ b/cmake/version.hpp.in
@@ -7,4 +7,6 @@
 #define @PROJECT_NAME_UPPERCASE@_MINOR_VERSION @PROJECT_VERSION_MINOR@
 #define @PROJECT_NAME_UPPERCASE@_PATCH_VERSION @PROJECT_VERSION_PATCH@
 
+#define @PROJECT_NAME_UPPERCASE@_COMMIT_HASH "@GIT_COMMIT_HASH@"
+
 #endif  // @PROJECT_NAME_UPPERCASE@_VERSION_H_
