--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.24.0 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.26.0 FATAL_ERROR)
 
 project(
     "linky"
@@ -7,16 +7,39 @@ project(
 )
 
 if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
-  message(FATAL_ERROR "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there.\n")
+  message(
+    FATAL_ERROR
+    "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there.\n"
+  )
 endif()
+
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
+
+set(BUILD_SHARED_LIBS OFF)
 
 option(${PROJECT_NAME}_USE_ALT_NAMES "Use alternative names for the project, such as naming the include directory all lowercase." ON)
 option(${PROJECT_NAME}_GENERATE_EXPORT_HEADER "Create a `project_export.h` file containing all exported symbols." OFF)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 set(CMAKE_VS_PLATFORM_NAME "x64")
+
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "$<1:${CMAKE_BINARY_DIR}/lib>") # .lib, .a
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "$<1:${CMAKE_BINARY_DIR}/lib>") # .dll, .so
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "$<1:${CMAKE_BINARY_DIR}/bin>") # .exe
+
+if(WIN32)
+  message(STATUS "Build for WIN32")
+  add_definitions(-DNOMINMAX)
+elseif(LINUX)
+  message(STATUS "Build for Linux")
+endif()
+
+set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Distribution")
+
+set(CMAKE_CXX_FLAGS_DISTRIBUTION "/GS- /Gy /O2 /Oi /Ot")
+set(CMAKE_EXE_LINKER_FLAGS_DISTRIBUTION "${CMAKE_EXE_LINKER_FLAGS_RELEASE}")
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/external)
 
@@ -27,14 +50,6 @@ else()
   set(PROJECT_NAME_LOWERCASE ${PROJECT_NAME})
   set(PROJECT_NAME_UPPERCASE ${PROJECT_NAME})
 endif()
-
-# Global configuration types
-set(CMAKE_CONFIGURATION_TYPES
-    "Debug"
-    "Release"
-    "Distribution"
-    CACHE STRING "" FORCE
-)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
