--- a/engine/core/CMakeLists.txt
+++ b/engine/core/CMakeLists.txt
@@ -1,5 +1,31 @@
-file(GLOB_RECURSE src_files "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
-add_library(core STATIC ${src_files})
+add_library(core)
+set_warnings_as_errors(core)
+
+# We include the GL loader ourselfs
+target_compile_definitions(core PUBLIC
+  GLFW_INCLUDE_NONE
+  SPDLOG_ACTIVE_LEVEL=0)
+
+# Make the MSVC compilers preprocessor more standard like
+if ((MSVC))
+  target_compile_options(core PUBLIC "/Zc:preprocessor")
+endif()
+
+if(NOT CMAKE_BUILD_TYPE MATCHES RELEASE)
+  target_compile_definitions(core PUBLIC LINKY_ENABLE_ASSERT)
+  # target_compile_definitions(core PUBLIC LINKY_ENABLE_PROFILING)
+  target_compile_definitions(core PUBLIC LINKY_ENABLE_TIMING)
+endif()
+
+
+# Include directories
+target_include_directories(core PUBLIC
+  "${CMAKE_CURRENT_SOURCE_DIR}/.."
+  "${PROJECT_BINARY_DIR}/include"
+)
+
+file(GLOB_RECURSE src_files "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
+target_sources(core PRIVATE ${src_files})
 
 include(glm)
 include(spdlog)
@@ -13,7 +39,7 @@ include(stduuid)
 include(lua)
 include(sol2)
 include(gsl)
-include(reflectcpp)
+#include(reflectcpp)
 
 target_link_libraries(core PUBLIC
   external::glm
@@ -28,11 +54,7 @@ target_link_libraries(core PUBLIC
   external::lua
   external::sol2
   external::gsl
-  external::reflectcpp
+  #external::reflectcpp
 )
 
-# Include directories
-target_include_directories(core PUBLIC
-  "${CMAKE_CURRENT_SOURCE_DIR}/.."
-  "${PROJECT_BINARY_DIR}/include"
-)
+target_compile_features(core PUBLIC cxx_std_23)
