--- a/engine/core/serialization/CMakeLists.txt
+++ b/engine/core/serialization/CMakeLists.txt
@@ -1,21 +1,41 @@
-file(GLOB_RECURSE libsrc *.h *.cpp *.hpp *.c *.cc)
+cmake_minimum_required(VERSION 3.26.0 FATAL_ERROR)
 
 set(target_name serialization)
+project(${target_name} LANGUAGES CXX)
 
-add_library(${target_name} ${libsrc})
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+
+file(GLOB_RECURSE libsrc src/*.cpp src/*.c src/*.cc)
+
+add_library(${target_name} STATIC ${libsrc})
 
 include(cereal)
-target_link_libraries(${target_name} PUBLIC external::cereal)
-
-target_include_directories(${target_name}
-    PUBLIC
-		${CMAKE_CURRENT_SOURCE_DIR}/..
+target_link_libraries(${target_name} PUBLIC
+    external::cereal
 )
 
-set_target_properties(${target_name} PROPERTIES
-    CXX_STANDARD 23
-    CXX_STANDARD_REQUIRED YES
-    CXX_EXTENSIONS NO
-    POSITION_INDEPENDENT_CODE ON
-    WINDOWS_EXPORT_ALL_SYMBOLS ON
+target_include_directories(${target_name} PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+
+target_precompile_headers(${target_name}
+    INTERFACE
+    <string>
+)
+
+# enable testing functionality
+enable_testing()
+
+# testing binary
+add_executable(${target_name}_test test/test.cpp)
+target_link_libraries(${target_name}_test PRIVATE ${target_name})
+
+# define tests
+add_test(
+  NAME ${target_name}_test
+  COMMAND $<TARGET_FILE:${target_name}_test>
 )
