--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -10,10 +10,10 @@ target_sources(linky_core_tests
 #add_subdirectory(conformance)
 #add_subdirectory(conversion)
 #add_subdirectory(functional)
-#add_subdirectory(memory)
-#add_subdirectory(meta)
-#add_subdirectory(network)
+add_subdirectory(math)
+add_subdirectory(parser)
 add_subdirectory(reflection)
+add_subdirectory(serialization)
 
 get_target_property(SOURCES_FILES linky_core_tests SOURCES)
 source_group(TREE ${CMAKE_CURRENT_LIST_DIR} FILES ${SOURCES_FILES})
