--- a/engine/core/CMakeLists.txt
+++ b/engine/core/CMakeLists.txt
@@ -24,8 +24,10 @@ target_link_libraries(linky_core PUBLIC
 
 add_subdirectory(math)
 add_subdirectory(parser)
+add_subdirectory(profiler)
 add_subdirectory(reflection)
 add_subdirectory(serialization)
+add_subdirectory(concurrency)
 
 target_compile_features(linky_core PUBLIC cxx_std_23)
 target_compile_options(linky_core
